--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ header .logo {
     box-shadow: 0px 1.65px 11px 4px rgba(0, 0, 0, 0.5);
 }
 
- .logo img {
+.logo img {
     width: 40px;
 }
 
@@ -72,49 +72,55 @@ header .nav a {
     padding: 5.3541765213012695px 20.18113136291504px;
 
 }
-footer{
-    padding:40px;
+
+footer {
+    padding: 40px;
     background-color: #393E46;
-    color:#FFFFFF;
-    font-family : var(--mainFont);
+    color: #FFFFFF;
+    font-family: var(--mainFont);
 }
 
- footer .logo{
-    display:flex;
-    flex-wrap:wrap;
+footer .logo {
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap:10px;
-   
- }
- .start-footer{
-    display:flex;
+    gap: 10px;
+
+}
+
+.start-footer {
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    gap:10px;
-    width:400px;
- }
- footer .icon img{
-width:20px;
-height:20px;
-padding :10px;
-border:solid 1px;
- }
- .end-footer {
+    gap: 10px;
+    width: 400px;
+}
+
+footer .icon img {
+    width: 20px;
+    height: 20px;
+    padding: 10px;
+    border: solid 1px;
+}
+
+.end-footer {
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
     justify-content: space-evenly;
 }
 
- footer ul{
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction:column;
-    gap:10px;
+footer ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 10px;
 }
-footer a{
-    color:#ffffff;
+
+footer a {
+    color: #ffffff;
 }
+
 @media screen and (max-width :999px) {
 
     .header .nav,
@@ -136,37 +142,60 @@ footer a{
 
 @media screen and (max-width :480px) {
 
-    header .logo {
+     .logo {
         gap: 6px;
     }
 
-    header .logo img {
+    .logo img {
         width: 25px;
     }
 
-    header .logo a {
+    .logo a {
         font-size: 12px;
     }
-   
-     
+
+
 }
+
 @media screen and (max-width :1200px) {
-    .start-footer{
-        width:100%;
+    .start-footer {
+        width: 100%;
+
     }
+
+
 }
 
 @media screen and (max-width :710px) {
- .items{
-        width:50%;
-        margin-top: 10px;
-    }
-}
-@media screen and (max-width :430px) {
-    .items{
-           width:100%;
-          
-       }
-       
-   }
+   
+    .start-footer {
 
+        font-size: 10px;
+    }
+
+    footer .icon img {
+        padding: 5px;
+        width: 10px;
+        height: 10px;
+    }
+    
+    footer .h2 {
+        font-size: 15px;
+    }
+    .items {
+        width: 50%;
+        margin-top: 10px;
+        font-size: 10px;
+    }
+    
+
+
+}
+
+@media screen and (max-width :430px) {
+    .items {
+        width: 100%;
+
+    }
+
+}
